# minecrab

./: .drone.yml  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: atlas.xcf
assets/block/: campfire_log_lit.png.mcmeta  dragon_egg.png.mcmeta  furnace_front_on.png.mcmeta  glowstone.png.mcmeta  jukebox_top.png.mcmeta  kelp_plant.png.mcmeta  lantern.png.mcmeta  lava_flow.png.mcmeta  lava_still.png.mcmeta  magma.png.mcmeta  nether_portal.png.mcmeta  prismarine.png.mcmeta  redstone_ore.png.mcmeta  repeating_command_block_conditional.png.mcmeta  sea_lantern.png.mcmeta  smoker_front_on.png.mcmeta  soul_campfire_fire.png.mcmeta  soul_campfire_log_lit.png.mcmeta  soul_fire_0.png.mcmeta  soul_lantern.png.mcmeta  stonecutter_saw.png.mcmeta  tall_seagrass_top.png.mcmeta  water_flow.png.mcmeta  water_still.png.mcmeta
assets/block/_bdc/: torch_flame.png.mcmeta
assets/block/technology/: containment.png.mcmeta
assets/block_temp/: grass.xcf
assets/models/: minecrab.glb
src/: aabb.rs  camera.rs  chunk.rs  cube.rs  geometry.rs  geometry_buffers.rs  hud_state.rs  instance.rs  light.rs  main.rs  npc.rs  player.rs  quad.rs  render_context.rs  renderable.rs  shader.wgsl  state.rs  text_renderer.rs  texture.rs  time.rs  uniforms.rs  utils.rs  vertex.rs  view.rs  world.rs  world_state.rs
src/hud/: debug_hud.rs  hotbar_hud.rs  mod.rs  widgets_hud.rs
src/shaders/: ui.wgsl  world.wgsl
src/state/: hud.rs  hud_state.rs  mod.rs  world.rs  world_state.rs
src/world/: block.rs  chunk.rs  face_flags.rs  mod.rs  npc.rs  quad.rs  world.rs
