[package]
name = "minecrab"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = "0.16"
ahash = "0.7.4"
anyhow = "1.0.40"
bytemuck = { version = "1.5.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.8.3"
futures = "0.3.15"
image = "0.23.14"
log = "0.4.14"
noise = "0.7.0"
rayon = "1.5.1"
wgpu = "0.8.1"
winit = { version = "0.25.0" }
serde_repr = "0.1.7"
rmp-serde = "0.15.4"
itertools = "0.10.0"
serde = { version = "1.0.126", features = ["derive"] }
sled = { version = "0.34.6", features = ["compression"] }

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = 3
